# freeworld

./: .gitignore  .gitmodules  CMakeLists.txt  COMPILE.md  README.md  issues
doc-dev/: about.md  code_structure.dia
src/app/sp/default/: CMakeLists.txt  main.cpp
src/common/: CMakeLists.txt  utils.cpp  utils.h
src/common-mpc-sp/: CMakeLists.txt  handle_mi.cpp  handle_mi.h  package_manager.cpp  package_manager.h
src/common-mps-sp/: CMakeLists.txt  core_utils.cpp  core_utils.h  load_vm.cpp  load_vm.h
src/common-mps-sp/database/: chunks.cpp  chunks.h  database.cpp
src/impl-headers/: control.h  general.h  sprite.h  video.h  wall.h
src/impl-headers/mpc-sp/: control.h
src/impl-headers/mps-sp/: database.h
src/impl/mpc-sp/sdl/: CMakeLists.txt  sdl.cpp  sdl.h  wall.cpp
src/impl/mps-sp/sqlite/: CMakeLists.txt  chunks.cpp  chunks.h  database.cpp  database.h
src/impl/sdl/: CMakeLists.txt  sdl.cpp  wall.cpp
src/impl/sp/default/: CMakeLists.txt  main.cpp
src/integration-headers/mpc-mps-sp/: system.hpp
src/integration-headers/mpc-sp/: control.hpp  general.hpp  input.hpp  integration.hpp  sprite.hpp  video.hpp  wall.hpp
src/integration-headers/mps-sp/: chunks.hpp  database.hpp  integration.hpp
src/integration/app/mps-sqlite/: CMakeLists.txt
src/integration/app/sp-sdl-sqlite/: CMakeLists.txt  fixdir.hpp  main.cpp
src/integration/lib/mpc-sp-sdl/: CMakeLists.txt  input.cpp  input.hpp  integration.cpp  integration.hpp  sdl.cpp  sdl.hpp  sprite.cpp  system.cpp  system.hpp  video.cpp  video.hpp  wall.cpp
src/integration/lib/mps-sp-sqlite/: CMakeLists.txt  chunks.cpp  chunks.hpp  database.cpp  database.hpp  integration.cpp  integration.hpp  util.hpp
src/mpc/: instance.hpp
src/mpc-mps-sp/: CMakeLists.txt  utils.cpp  utils.hpp
src/mpc-sp/: CMakeLists.txt  handle_mi.cpp  handle_mi.hpp  instance.cpp  instance.hpp  media_manager.cpp  media_manager.hpp  package_manager.cpp  package_manager.hpp
src/mps/: instance.hpp
src/mps-sp/: CMakeLists.txt  core_utils.cpp  core_utils.hpp  database.cpp  database.hpp  instance-private.cpp  instance-private.hpp  instance.cpp  instance.hpp  load_vm.cpp  load_vm.hpp
src/mps-sp/database/: chunks.cpp  chunks.hpp  database.cpp  database.hpp
src/sp/: CMakeLists.txt  instance.cpp  instance.hpp  sp.cpp  sp.h  sp.hpp
