cmake_minimum_required(VERSION 2.6)

include_directories(${CMAKE_CURRENT_SOURCE_DIR})

add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/integration/lib/mpc-sp-sdl/)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/integration/lib/mps-sp-sqlite/)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/integration/app/mpc-sdl/)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/integration/app/mps-sqlite/)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/integration/app/sp-sdl-sqlite/)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/mpc-mps-sp/)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/mpc-sp/)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/mps-sp/)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/mpc/)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/mps/)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/sp/)
